--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -36,6 +36,7 @@ in the form $setting: value,
   $theme-grid-container-max-width: "desktop-lg",
   $theme-footer-max-width: "desktop-lg",
   $theme-identifier-max-width: "desktop-lg",
+  $theme-site-alert-max-width: "desktop-lg",
   $theme-column-gap-desktop: 6,
   $theme-column-gap-md: 4,
   $theme-column-gap-lg: 6,
