update fonts to match brand: Public Sans, Newsreader

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -22,6 +22,8 @@ i.e.
 
 @use "uswds-core" as *;
 
+@import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
+
 .pdf-card {
   transition: transform 0.2s;
   @include u-shadow(2);
