[Issue #3218] add custom button styles (#3227)
Add custom CSS for button styles
Fixes #3218

--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -182,5 +182,12 @@ in the form $setting: value,
   $theme-link-active-color: "mint-70",
   $theme-link-reverse-color: "mint-5",
   $theme-link-reverse-hover-color: "mint-10",
-  $theme-link-reverse-active-color: "white"
+  $theme-link-reverse-active-color: "white",
+
+  // Button
+  $theme-button-border-radius: 2px,
+  // $theme-button-font-family: "ui",
+  // $theme-button-icon-gap: 1,
+  // $theme-button-small-width: 6,
+  // $theme-button-stroke-width: 2px
 );
