--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -33,6 +33,7 @@ in the form $setting: value,
     ),
   $theme-banner-max-width: "desktop-lg",
   $theme-header-max-width: "desktop-lg",
+  $theme-header-logo-text-width: 27%,
   $theme-grid-container-max-width: "desktop-lg",
   $theme-footer-max-width: "desktop-lg",
   $theme-identifier-max-width: "desktop-lg",
@@ -48,6 +49,8 @@ in the form $setting: value,
     hover: false,
     visited: false
   ),
+  $height-settings: (responsive: true),
+  $z-index-settings: (responsive: true),
   $flex-settings: (
     output: true,
     responsive: true,
