--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -198,5 +198,10 @@ in the form $setting: value,
   // $theme-button-font-family: "ui",
   // $theme-button-icon-gap: 1,
   // $theme-button-small-width: 6,
-  // $theme-button-stroke-width: 2px
+  // $theme-button-stroke-width: 2px,
+  // Identifier
+  $theme-identifier-background-color: "mint-70",
+  $theme-identifier-primary-link-color: "mint-5",
+  $theme-identifier-identity-domain-color: "white",
+  $theme-identifier-secondary-link-color: "mint-5"
 );
