Update Header.tsx and styles

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -30,6 +30,8 @@ i.e.
     @include u-shadow(4);
   }
 }
-.margin-bottom-5px {
-  margin-bottom: 5px;
+@include at-media("desktop") {
+  .desktop\:margin-bottom-5px {
+    margin-bottom: 5px !important;
+  }
 }
