style beta alert to match brand

--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -152,12 +152,12 @@ in the form $setting: value,
   // $theme-color-error-dark: "red-60v",
   // $theme-color-error-darker: "red-70",
   // Warning colors
-  // $theme-color-warning-family: "gold",
-  // $theme-color-warning-lighter: "yellow-5",
-  // $theme-color-warning-light: "yellow-10v",
-  // $theme-color-warning: "gold-20v",
-  // $theme-color-warning-dark: "gold-30v",
-  // $theme-color-warning-darker: "gold-50v",
+  $theme-color-warning-family: "yellow",
+  $theme-color-warning-lighter: "yellow-5v",
+  $theme-color-warning-light: "yellow-10v",
+  $theme-color-warning: "yellow-20v",
+  $theme-color-warning-dark: "gold-30v",
+  $theme-color-warning-darker: "orange-warm-40v",
   // Success colors
   // $theme-color-success-family: "green-cool",
   // $theme-color-success-lighter: "green-cool-5",
@@ -202,6 +202,11 @@ in the form $setting: value,
   // $theme-button-icon-gap: 1,
   // $theme-button-small-width: 6,
   // $theme-button-stroke-width: 2px,
+  // Alert
+  $theme-alert-padding-x: 2.5,
+  $theme-alert-padding-y: 3,
+  $theme-alert-icon-size: 3,
+
   // Identifier
   $theme-identifier-background-color: "mint-70",
   $theme-identifier-primary-link-color: "mint-5",
