swap all serif fonts to sans

--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -81,6 +81,7 @@ in the form $setting: value,
   $theme-type-scale-xl: 12,
   $theme-type-scale-2xl: 15,
   $theme-type-scale-3xl: 17,
+  $theme-lead-font-family: "body",
 
   // Color settings
   $background-color-palettes:
