[Issue #2653] Sign in component (#3281)

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -30,3 +30,8 @@ i.e.
     @include u-shadow(4);
   }
 }
+@include at-media("desktop") {
+  .desktop\:margin-bottom-5px {
+    margin-bottom: 5px !important;
+  }
+}
