[Issue #2653] Sign in component (#3281)

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -378,3 +378,9 @@ button.usa-pagination__button.usa-button {
     color: white;
   }
 }
+
+@include at-media("desktop") {
+  .desktop\:margin-bottom-5px {
+    margin-bottom: 5px !important;
+  }
+}
