--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -390,21 +390,34 @@ button.usa-pagination__button.usa-button {
 
 // we are implementing the uswds nav drop down at mobile widths, which is not ordinarily supported
 // these styles are taken from the desktop imlementation of the dropdown and applied at all breakpoints
-.mobile-nav-dropdown-uncollapsed-override {
-  button[aria-expanded=true] {
-    background-color: color("mint-60");
-  }
-  .usa-nav__submenu-item {
-    background-color: color('mint-60');
-    a {
-      padding-left: 1rem;
-      padding-right: 1rem;
-      color: white;
-      line-height: 1.4;
-      display: block;
+.usa-nav__primary {
+  .mobile-nav-dropdown-uncollapsed-override {
+    button[aria-expanded=true] {
+      background-color: color("mint-60");
+      a {
+        color: white;
+      }
+      span:after {
+        mask-image: url("/uswds/img/usa-icons/expand_less.svg"), linear-gradient(transparent, transparent);
+      }
     }
-  }
-  .usa-nav__submenu {
-    right: 3.6em;
+    button[aria-expanded=false] {
+      span:after {
+        mask-image: url("/uswds/img/usa-icons/expand_more.svg"), linear-gradient(transparent, transparent);
+      }
+    }
+    .usa-nav__submenu-item {
+      background-color: color('mint-60');
+      a {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        color: white;
+        line-height: 1.4;
+        display: block;
+      }
+    }
+    .usa-nav__submenu {
+      right: 3.6em;
+    }
   }
 }
