Update Header.tsx and compilation options

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -435,3 +435,12 @@ button.usa-pagination__button.usa-button {
     }
   }
 }
+
+// revert to behavior before upgrade https://github.com/uswds/uswds/commit/2785b67e58ae19f161101f4859afff0e9664fbda
+.usa-header--basic {
+  @include at-media($theme-header-min-width) {
+    .usa-nav {
+      padding: 0 0 units(0.5) units(1);
+    }
+  }
+}
