--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -10,7 +10,7 @@ in the form $setting: value,
 @use "uswds-core" with (
   // Disable scary but mostly irrelevant warnings:
   $theme-show-notifications: false,
-
+  $theme-show-compile-warnings: false,
   // Specify USWDS font and image paths.
   // Same paths are successfully used for both Next.js and Storybook.
   $theme-font-path: add-base-path("/uswds/fonts"),
