Update loading spinner

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -257,6 +257,14 @@ i.e.
       color: color("gray-70");
     }
   }
+  .grants-spinner {
+    height: units(3);
+    width: units(3);
+    margin: units(0.5);
+    &::after {
+      border-width: 3px;
+    }
+  }
 }
 
 // There is no config for setting the current nav item border color
