--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -238,6 +238,35 @@ i.e.
   padding: units(1) units(2);
 }
 
+.simpler-save-button {
+  padding: units(0.5) units(2) units(0.5) units(1);
+
+  svg {
+    font-size: 2rem;
+  }
+  &--saved {
+    svg {
+      color: color("orange-40v");
+    }
+  }
+  &--loading:disabled {
+    color: color("gray-70");
+    border-color: color("gray-70");
+    box-shadow: inset 0 0 0 2px color("gray-70");
+    svg {
+      color: color("gray-70");
+    }
+  }
+  .grants-spinner {
+    height: units(3);
+    width: units(3);
+    margin: units(0.5);
+    &::after {
+      border-width: 3px;
+    }
+  }
+}
+
 // There is no config for setting the current nav item border color
 .usa-header--basic .usa-nav__primary-item > .usa-current::after {
   background-color: color("mint-40");
