Update icon size

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -243,6 +243,11 @@ i.e.
   margin: 0 units(0.5) 0 0;
 }
 
+.button-icon-md {
+  transform: scale(1.75);
+  margin: 0 units(0.5) 0 0;
+}
+
 .icon-active {
   color: color("orange-40v");
 }
