--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -252,6 +252,11 @@ i.e.
   color: color("orange-40v");
 }
 
+.usa-tooltip__body {
+  background-color: color("secondary-darker");
+  color: white;
+}
+
 // There is no config for setting the current nav item border color
 .usa-header--basic .usa-nav__primary-item > .usa-current::after {
   background-color: color("mint-40");
