--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -211,5 +211,9 @@ in the form $setting: value,
   $theme-identifier-background-color: "mint-70",
   $theme-identifier-primary-link-color: "mint-5",
   $theme-identifier-identity-domain-color: "white",
-  $theme-identifier-secondary-link-color: "mint-5"
+  $theme-identifier-secondary-link-color: "mint-5",
+
+  // Tooltip
+  $theme-tooltip-background-color: "blue-cool-60v",
+  $theme-tooltip-font-color: "white"
 );
