--- a/frontend/src/styles/_uswds-theme.scss
+++ b/frontend/src/styles/_uswds-theme.scss
@@ -48,6 +48,8 @@ in the form $setting: value,
     hover: false,
     visited: false
   ),
+  $right-settings: (responsive: true),
+  $top-settings: (responsive: true),
   $height-settings: (responsive: true),
   $z-index-settings: (responsive: true),
   $flex-settings: (
