feature/3939: Add main skeleton for vision page
Adds the necessary components for Vision page.
Creates multiple sub-components for the Vision page
Adds the locale necessary for the Vision page.
Adds necessary color classes for the Vision page.

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -257,6 +257,10 @@ i.e.
   background-color: color("mint-40");
 }
 
+.bg-mint-70 {
+  background-color: color("mint-70");
+}
+
 // Hero
 .hero {
   .hero--container {
