--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -24,6 +24,10 @@ i.e.
 
 @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
 
+#main-content:has(div:last-child.bg-base-lightest)+footer.usa-footer {
+  background-color: $theme-color-base-lightest;
+}
+
 .pdf-card {
   transition: transform 0.2s;
   @include u-shadow(2);
