uswds-theme: add custom style so breadcrumb visited link inherits parent text color

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -483,6 +483,13 @@ button.usa-pagination__button.usa-button {
   color: inherit;
 }
 
+.usa-breadcrumb__link {
+  &:visited {
+    color: inherit;
+  }
+}
+
 #main-content:has(div:last-child.bg-base-lightest)+footer.usa-footer {
   background-color: color($theme-color-base-lightest);
 }
+
