--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -301,11 +301,26 @@ i.e.
   }
 }
 
-// Events Hero 
+// Events 
 .events-hero {
   .events-hero--container {
     padding-top: 65px;
   }
+}
+
+.usa-breadcrumb {
+  background-color: inherit;
+  color: inherit;
+}
+
+.usa-breadcrumb__link {
+  &:visited {
+    color: inherit;
+  }
+}
+
+#main-content:has(div:last-child.bg-base-lightest)+footer.usa-footer {
+  background-color: color($theme-color-base-lightest);
 }
 
 // Footer
@@ -477,19 +492,3 @@ button.usa-pagination__button.usa-button {
     }
   }
 }
-
-.usa-breadcrumb {
-  background-color: inherit;
-  color: inherit;
-}
-
-.usa-breadcrumb__link {
-  &:visited {
-    color: inherit;
-  }
-}
-
-#main-content:has(div:last-child.bg-base-lightest)+footer.usa-footer {
-  background-color: color($theme-color-base-lightest);
-}
-
