[Issue #3941] events page updates  (#4424)
## Summary
Fixes [#3941](https://github.com/HHS/simpler-grants-gov/issues/3941)

### Time to review: __15 mins__

## Changes proposed
> What was added, updated, or removed in this PR.
- adds Event page. Events page is broken down into the following
components:
   - EventsHero
   - EventsUpcoming
   - EventsDemo
   - EventsCoding
- i18n/messages/en -> adds copy for events page
- adds custom css for the following: 
- usa-breadcrumb & usea-breadcrumd__link(visited): to make breadcrumb
text white/visible against green background of hero. This will be
helpful for other pages with breadcrumbs on a non-white background.
- adds custom css rule for background color of "return to top" section
of footer, to make it seamless with last child of main component
- adds unit tests for all components and accessibility tests
   - updates getRoutes test to include new /events route  
- adds images for events page 

DOCUMENTATION UPDATE: 
- adds instructions to frontend README for running one unit test at a
time.


## Context for reviewers
> Testing instructions, background context, more in-depth details of the
implementation, and anything else you'd like to call out or ask
reviewers. Explain how the changes were verified.

- assert that tests are passing 
- assert that styling matches figma (within uswds constraints):
http://figma.com/design/FGxWtAgToKhehLJCiuy1zL/Simpler.Grants.gov-Project?node-id=3422-31812&p=f&t=7ZqxN7gA2grK0gQP-0



## Additional information
> Screenshots, GIF demos, code examples or output to help show the
changes working as expected.



https://github.com/user-attachments/assets/13e4f449-c874-450a-acb8-654375b44e58

---------

Co-authored-by: karinamzalez <karinamzalez@gmail.com>

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -300,6 +300,12 @@ i.e.
   }
 }
 
+// Events
+
+#main-content:has(div:last-child.bg-base-lightest) + footer.usa-footer {
+  background-color: color($theme-color-base-lightest);
+}
+
 // Footer
 .usa-footer__primary-section {
   background-color: color("mint-5");
