add icons to dropdown external links

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -479,3 +479,9 @@ button.usa-pagination__button.usa-button {
     }
   }
 }
+
+.icon-btn {
+  display: flex;
+  align-items: baseline;
+  gap: 5px;
+}
